--- a/public/html/index.html
+++ b/public/html/index.html
@@ -14,7 +14,7 @@
     <div class="sideBar closed">
         <div class="sideBar__header">
             <p class="sideBar__header__tower">TowerName</p>
-            <img src="../extras/closeSidebar.svg" alt="Close Button" onclick="closeSideBar()" class="sideBar__header__close">
+            <img src="../extras/closeSidebar.svg" alt="Close Button" onclick="closeSideBar(event)" class="sideBar__header__close">
         </div>
 
         <div class="sideBar__main">
