--- a/public/html/index.html
+++ b/public/html/index.html
@@ -38,18 +38,22 @@
 
     <p class="coinCount">$0</p>
 
+    <div class="play-container">
+        <img src="../extras/pauseIcon.svg" alt="play Btn" class="play-container__btn" id="play" operation="0">
+    </div>
+
     <div class="error closed">
-        <p class="error__title">- ERROR -</p>
-        <p class="error__description">An error has occur with no info.</p>
+        <p class="error__title">ERROR</p>
+        <p class="error__description"></p>
     </div>
 
     <div class="game">
         <div class="game__row">
-            <div class="game-track" id="track-1"><div class="enemy-base enemy-1"></div></div>
-            <div class="game-track" id="track-2"><div class="enemy-base enemy-2"></div></div>
-            <div class="game-track" id="track-3"><div class="enemy-base enemy-3"></div></div>
-            <div class="game-track" id="track-4"><div class="enemy-base enemy-4"></div></div>
-            <div class="game-track" id="track-5"><div class="enemy-base enemy-5"></div></div>
+            <div class="game-track" id="track-1"></div>
+            <div class="game-track" id="track-2"></div>
+            <div class="game-track" id="track-3"></div>
+            <div class="game-track" id="track-4"></div>
+            <div class="game-track" id="track-5"></div>
             <div class="game-track" id="track-6"></div>
             <div class="game-track" id="track-7"></div>
             <div class="game-track" id="track-8"></div>
@@ -134,4 +138,5 @@
     <script src="../js/placeTower.js" type="module"></script>
     <script src="../js/sideBar.js" type="module"></script>
     <script src="../js/track.js" type="module"></script>
+    <script src="../js/classes/enemy.js" type="module"></script>
 </html>
